修改    for (arg in JVM_ARGS.split(", ")) {