@@ -17,7 +17,7 @@ ext {
     HARBOR_PASSWORD='sky373641@Miao'
 
     //jvm
-    JVM_ARGS=''
+    JVM_ARGS='-Xms512m,-Xmx512m,-Xmn128m,-Xss1024K,-XX:+DisableExplicitGC,-XX:+UseConcMarkSweepGC,-XX:+CMSParallelRemarkEnabled,-XX:LargePageSizeInBytes=128m,-XX:+UseFastAccessorMethods,-XX:+UseCMSInitiatingOccupancyOnly,-XX:CMSInitiatingOccupancyFraction=70'
 
     jvmArg = [
             //"-Xms128m".toString(),
